--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "^15.3.2",
     "query-string": "^9.2.0",
     "react": "^19.0.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7"
