feat: add node-appwrite dependency to package.json and package-lock.json

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.511.0",
     "next": "^15.3.2",
+    "node-appwrite": "^17.0.0",
     "query-string": "^9.2.0",
     "react": "^19.0.0",
     "react-countup": "^6.5.3",
