--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.511.0",
     "next": "^15.3.2",
+    "next-themes": "^0.4.6",
     "node-appwrite": "^17.0.0",
     "query-string": "^9.2.0",
     "react": "^19.0.0",
@@ -32,6 +33,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.60.0",
     "recharts": "^2.15.3",
+    "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^4.0.5"
