--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
     "next": "^15.3.2",
     "next-themes": "^0.4.6",
     "node-appwrite": "^17.0.0",
+    "plaid": "^37.0.0",
     "query-string": "^9.2.0",
     "react": "^19.0.0",
     "react-countup": "^6.5.3",
     "react-day-picker": "^9.8.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.60.0",
+    "react-plaid-link": "^4.0.1",
     "recharts": "^2.15.3",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.0",
